<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imgLogoLogin"
        android:layout_width="213dp"
        android:layout_height="214dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/clock_image"
        android:contentDescription="@string/logoAltText"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tvLoginLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <!-- Login Label at the top center -->
    <TextView
        android:id="@+id/tvLoginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/text"
        android:textSize="28sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/authenticate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <!--Username Input Field-->

    <!-- Password Input Field -->

    <!-- Login Button -->

    <!-- Google Sign In Button -->
    <ImageButton
        android:id="@+id/GoogleSignIn"
        android:layout_width="62dp"
        android:layout_height="54dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/google_sign_in_button"
        android:src="@drawable/common_google_signin_btn_icon_dark"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/authenticate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="150dp"
        android:backgroundTint="@color/button_background"
        android:elevation="6dp"
        android:padding="16dp"
        android:text="@string/login"
        android:textColor="@color/button_text"
        app:layout_constraintBottom_toTopOf="@+id/GoogleSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Register Link -->


</androidx.constraintlayout.widget.ConstraintLayout>